# MCP-Expense-Tracker

./: .env  README.md  catagories.json  client.py  main.py  proxy_server.py  pyproject.toml  remote_server.py
