[project]
name = "mcp-campusx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.2",
    "supabase>=2.8.1",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.9",
    "aiofiles>=24.1.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-mcp-adapters>=0.2.1",
    "streamlit>=1.52.2",
    "langchain-google-genai>=4.1.2",
]
